Update Alif to 3.0.17
Update Alif to 3.0.17

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,26 @@ set(WD_Linux "/bin")
 
 link_directories(${AlifProject_BIN_DIR}/alif)
 
+# --[ International Components for Unicode (ICU) ] -----------------------------
+
+# /lib/x86_64-linux-gnu/libicuuc.a
+
+if(UNIX)
+	message("[*] Using installed copy of ICU Library on Linux.")
+
+	find_package(ICU 60.0 COMPONENTS io i18n REQUIRED)
+
+	if(ICU_FOUND)
+		include_directories(${ICU_INCLUDE_DIRS})
+		link_directories(${ICU_LIBRARY_DIRS})
+	else()
+		message("[!] Please install ICU +66.0 libraries.")
+		return()
+	endif()	
+else()
+	message("[!] Not settings needed for ICU on Windows.")
+endif()
+
 # --[ Boost ] -------------------------------------------------------------------
 
 if(UNIX)
@@ -65,18 +85,23 @@ else()
 	return()
 endif()
 
+# if (NOT FO_BOOST_STATIC_LINK)
+# 	message("[*] Boost static ?")
+# 	add_definitions(-DBOOST_ALL_NO_LIB -DBOOST_ALL_DYN_LINK -DBOOST_LOG_DYN_LINK)
+# endif()
+
 # --[ Target ] ------------------------------------------------------------------
 
 add_executable(${Info_App} ${Info_Source})
 
 if(UNIX)
-	message("[*] Setting working directory to ${WD_Linux}...")
-	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${WD_Linux})
-	set(EXECUTABLE_OUTPUT_PATH ${WD_Linux})
-	set_target_properties(${Info_App} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${WD_Linux})
-	set_target_properties(${Info_App} PROPERTIES CMAKE_RUNTIME_OUTPUT_DIRECTORY ${WD_Linux})
-	set_target_properties(${Info_App} PROPERTIES EXECUTABLE_OUTPUT_PATH_DEBUG ${WD_Linux})
-	set_target_properties(${Info_App} PROPERTIES CMAKE_EXECUTABLE_OUTPUT_PATH ${WD_Linux})
+	# message("[*] Setting working directory to ${WD_Linux}...")
+	# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${WD_Linux})
+	# set(EXECUTABLE_OUTPUT_PATH ${WD_Linux})
+	# set_target_properties(${Info_App} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${WD_Linux})
+	# set_target_properties(${Info_App} PROPERTIES CMAKE_RUNTIME_OUTPUT_DIRECTORY ${WD_Linux})
+	# set_target_properties(${Info_App} PROPERTIES EXECUTABLE_OUTPUT_PATH_DEBUG ${WD_Linux})
+	# set_target_properties(${Info_App} PROPERTIES CMAKE_EXECUTABLE_OUTPUT_PATH ${WD_Linux})
 else()
 	message("[*] Setting working directory to ${WD_Windows}...")
 	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${WD_Windows})
@@ -144,7 +169,20 @@ endif()
 # --[ Build ] -------------------------------------------------------------------
 
 if(UNIX)
-	target_link_libraries(${Info_App} ${Boost_LIBRARIES})
+	target_link_libraries(${Info_App} ${ICU_LIBRARIES} 
+	-licuuc -licudata -licui18n
+	${Boost_LIBRARIES})
 else()
 	target_link_libraries(${Info_App} ${Boost_LIBRARIES})
 endif()
+
+# --[ Install ] -----------------------------------------------------------------
+
+if(UNIX)
+	message("[*] Initializing installation settings...")
+	install (TARGETS ${Info_App}
+			ARCHIVE DESTINATION lib
+			LIBRARY DESTINATION lib
+			RUNTIME DESTINATION bin)
+	install (DIRECTORY ${AlifProject_SOURCE_DIR}/aliflib DESTINATION lib)
+endif (UNIX)
