--- a/.github/workflows/push2main.yml
+++ b/.github/workflows/push2main.yml
@@ -61,14 +61,18 @@ jobs:
           BOOST_ROOT: ${{steps.boost.outputs.root}}
           BOOST_LIBRARYDIR: ${{steps.boost.outputs.librarydir}}
         if: ${{ github.event_name != 'release' }}
-        run: make tests-syntax
+        run: |
+          export LD_LIBRARY_PATH=${{env.BOOST_LIBRARYDIR}}:$LD_LIBRARY_PATH
+          make tests-syntax
 
       - name: Tests
         env:
           BOOST_ROOT: ${{steps.boost.outputs.root}}
           BOOST_LIBRARYDIR: ${{steps.boost.outputs.librarydir}}
         if: ${{ github.event_name == 'release' }}
-        run: make tests
+        run: |
+          export LD_LIBRARY_PATH=${{env.BOOST_LIBRARYDIR}}:$LD_LIBRARY_PATH
+          make tests
 
   MinGW-Windows:
     runs-on: windows-latest
