--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -2,15 +2,31 @@ name: Build and Tests
 
 on:
   push:
+    branches: # all branches
+      - "**"
+    tags-ignore: # ignore pushing tags
+      - "**"
     paths-ignore:
-      - 'README.md'
+      - "README.md"
+
   pull_request:
     branches:
       - main
+    tags-ignore: # ignore pushing tags
+      - "**"
     paths-ignore:
-      - 'README.md'
+      - "README.md"
+
   release:
-    types: [released]
+    types: 
+      - published
+
+  workflow_dispatch:
+    inputs:
+      allTests:
+        description: "اختبارات كاملة ترجمةً وتنفيذًا؟ (نعم/لا)"
+        required: true
+        default: "نعم"
 
 env:
   BUILD_TYPE: Release
@@ -27,8 +43,8 @@ jobs:
       - name: Cache Boost
         uses: actions/cache@v2
         with:
-          path: '${{ runner.workspace }}/boost_*.tar.gz'
-          key: 'boost-${{env.BOOST_VER}}'
+          path: "${{ runner.workspace }}/boost_*.tar.gz"
+          key: "boost-${{env.BOOST_VER}}"
 
       - name: Build Boost
         id: boost
@@ -55,12 +71,11 @@ jobs:
           cmake --build .
           make
           sudo make install
-      
+
       - name: Tests Syntax
         env:
           BOOST_ROOT: ${{steps.boost.outputs.root}}
           BOOST_LIBRARYDIR: ${{steps.boost.outputs.librarydir}}
-        if: ${{ github.event_name != 'release' }}
         run: |
           export LD_LIBRARY_PATH=${{env.BOOST_LIBRARYDIR}}:$LD_LIBRARY_PATH
           make tests-syntax
@@ -69,22 +84,22 @@ jobs:
         env:
           BOOST_ROOT: ${{steps.boost.outputs.root}}
           BOOST_LIBRARYDIR: ${{steps.boost.outputs.librarydir}}
-        if: ${{ github.event_name == 'release' }}
+        if: ${{ github.event_name == 'release' || github.event.inputs.allTests == 'نعم' }}
         run: |
           export LD_LIBRARY_PATH=${{env.BOOST_LIBRARYDIR}}:$LD_LIBRARY_PATH
           make tests
 
   MinGW-Windows:
     runs-on: windows-latest
-    
+
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Cache Boost
         uses: actions/cache@v2
         with:
-          path: '${{ runner.workspace }}/boost_*.tar.gz'
-          key: 'boost-${{env.BOOST_VER}}'
+          path: "${{ runner.workspace }}/boost_*.tar.gz"
+          key: "boost-${{env.BOOST_VER}}"
 
       - name: Build Boost
         id: boost
@@ -109,11 +124,10 @@ jobs:
         working-directory: ${{github.workspace}}/build
         shell: cmd
         run: |
-             cmake ${{github.workspace}} -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+          cmake ${{github.workspace}} -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
       - name: Build
         working-directory: ${{github.workspace}}/build
         shell: cmd
         run: |
-             mingw32-make
-
+          mingw32-make
